<resources>
    <string name="oauth2_client_id">423665958477.apps.googleusercontent.com</string>
    <string name="menu_search">Search</string>
    <string name="title_app_name">UFO Watch</string>
    <string name="title_ufo_watch_activity">UFO Watch</string>
    <string name="title_settings">Settings</string>
    <string name="title_dialog_youtube">YouTube</string>
    <string name="title_youtube_permission">YouTube Permission</string>
    <string name="title_tab_video_list">Today\'s Videos</string>
    <string name="title_tab_video">YouTube</string>
    <string name="title_tab_search_engines">Search Engines</string>
    <string name="title_tab_sites">Various</string>
    <string name="title_tab_feeds">News Feeds</string>
    <string name="title_tab_blogs">Blogs</string>
    <string name="title_video_information">Video Information</string>
    <string name="title_menu_today">Last 24 hours</string>
    <string name="title_menu_by_date">By Date</string>
    <string name="title_menu_by_state">State</string>
    <string name="title_menu_by_country">Country</string>
    <string name="title_menu_ufowatchlists">Playlists</string>
    <string name="title_menu_mylists">My Lists</string>
    <string name="title_menu_channels">Channels</string>
    <string name="title_menu_more">More&#8230;</string>
    <string name="title_menu_reports">Reports</string>
    <string name="title_menu_maps">Maps</string>
    <string name="title_menu_feeds">Feeds</string>
    <string name="title_menu_blogs">Blogs</string>
    <string name="title_videos_today">Today</string>
    <string name="title_by_date">By Date</string>
    <string name="title_region">Regional</string>
    <string name="title_united_states">United States</string>
    <string name="title_canada">Canada</string>
    <string name="title_united_kingdom">United Kingdom</string>
    <string name="title_mexico">Mexico</string>
    <string name="title_france">France</string>
    <string name="title_australia">Australia</string>
    <string name="title_sub_us_canada_states">(by state)</string>
    <string name="title_other_countries">More countries&#8230;</string>
    <string name="title_sub_nuforc_reports">NUFORC (reports)</string>
    <string name="title_dialog_channels">Featured Channels</string>
    <string name="title_dialog_ufowatchlists">UFO Watch Playlists</string>
    <string name="title_dialog_youtube_actions">YouTube Actions</string>
    <string name="title_dialog_more">Reports | Maps | Books | Photos</string>
    <string name="title_dialog_feeds">RSS News Feeds</string>
    <string name="title_dialog_blogs">Blogs</string>
    <string name="title_dialog_myplaylists">My Playlists</string>
    <string name="title_dialog_playlists">Playlists</string>
    <string name="title_website_name">UFO Watch Website</string>
    <string name="subtitle_website_name">dukecreations.com</string>
    <string name="contact_email">dani@dukecreations.com</string>
    <string name="lbl_test">Get YouTube Feed for&#8230;</string>
    <string name="lbl_search_engine_google">Google</string>
    <string name="lbl_search_engine_bing">Bing</string>
    <string name="lbl_search_engine_yahoo">Yahoo!</string>
    <string name="lbl_source_news">News</string>
    <string name="lbl_source_web">Web</string>
    <string name="lbl_source_videos">Videos</string>
    <string name="lbl_range_day">Past 24 hrs</string>
    <string name="lbl_range_week">Past week</string>
    <string name="lbl_subject_sightings">UFO sightings</string>
    <string name="lbl_subject_beings">Extraterrestrial beings</string>
    <string name="lbl_btn_cancel">Cancel</string>
    <string name="lbl_btn_search">Search</string>
    <string name="lbl_btn_close">Close</string>
    <string name="lbl_btn_settings">Settings</string>
    <string name="lbl_btn_about">About</string>
    <string name="lbl_btn_account">YouTube Account</string>
    <string name="lbl_btn_share">Share</string>
    <string name="lbl_btn_youtube_video">Video</string>
    <string name="lbl_btn_youtube_channel">Channel</string>
    <string name="lbl_btn_about_website">Website</string>
    <string name="lbl_btn_about_email">Email</string>
    <string name="lbl_btn_help">Help</string>
    <string name="lbl_btn_create">Create</string>
    <string name="lbl_btn_full_screen">Full Screen</string>
    <string name="lbl_btn_youtube_options">Youtube Options</string>
    <string name="msg_error_retrieving_videos">Problem retrieving videos.</string>
    <string name="msg_error_video_missing">Video is missing or cannot be played outside of YouTube.</string>
    <string name="msg_error_there_is_a_problem">There was a problem, please try again.</string>
    <string name="msg_retrieving_videos">Retrieving videos&#8230;</string>
    <string name="msg_retrieving_video_title">Title&#8230;</string>
    <string name="msg_retrieving_video_description">Description&#8230;</string>
    <string name="msg_send_email_using">Send email using:</string>
    <string name="msg_about_copyright">&#169; 2012 Dani Duke.\nAll Rights Reserved.</string>
    <string name="msg_about_feedback">Feedback or suggestions? Please send me an email.</string>
	<string name="msg_supports_android_version">Supports Ice Cream Sandwich (v4.0.1) and up.</string>
    <string name="msg_about_library_usage">UFO Watch utilies the following 3rd party library available under apache license-2.0.</string>
    <string name="msg_about_viewpager">ViewPagerExtensions - Author: Andreas Steutz</string>
    <string name="msg_about_openyoutubeactivity">OpenYouTubeActivity - Original author: Keyes Labs</string>
    <string name="msg_share_video">Share video link?</string>
    <string name="msg_share_web_page">Share web page?</string>
    <string name="msg_video_added_to_playlist">Video added to</string>
    <string name="msg_video_liked">Video has been liked.</string>
    <string name="msg_video_disliked">Video has been disliked.</string>
    <string name="msg_video_ratingremoved">Video rating has been removed.</string>
    <string name="msg_subscribed">You are subscribed to</string>
    <string name="msg_no_playlists_found">No playlists found.</string>
    <string name="msg_no_videos_found">No videos found.</string>
    <string name="msg_grant_permission">You must first grant permission to an account.</string>
    <string name="msg_loading">Loading&#8230;</string>
    <string name="msg_play_all">Play All</string>
    <string name="msg_sightings">Sightings</string>
    <string name="hint_search_entry">Video Search: greys roswell interdimensional nasa&#8230;</string>
    <string name="tag_empty_list">emptylist</string>
    <string name="tag_my_list">mylist</string>
    <string name="url_dukecreations_ufowatch">http://www.dukecreations.com/UFO_Watch.html</string>
    <string name="url_youtube_video">http://www.youtube.com/watch?v=</string>
    <string name="url_youtube_channel">http://www.youtube.com/user/</string>
    <string name="url_site_strangegooglemaps">http://www.rodsbot.com/?cat=ufo</string>
    <string name="title_site_strangegooglemaps">Strange Google maps</string>
    <string name="url_site_u_database">http://classic-web.archive.org/web/20060904021154/http://www.larryhatch.net/REGMAPS.html</string>
    <string name="title_site_u_database">*U* Database maps</string>
    <string name="url_site_mufonbooks">http://www.mufonoc.org/books.htm</string>
    <string name="title_site_mufonbooks">Recommended books (MUFON)</string>
    <string name="url_site_cufosrecommended">http://www.cufos.org/books.html</string>
    <string name="title_site_cufosrecommended">Recommended books (CUFOS)</string>
    <string name="url_site_ufoevidenceliterature">http://www.ufoevidence.org/documents/doc1542.htm</string>
    <string name="title_site_ufoevidenceliterature">Serious literature</string>
    <string name="url_site_mactonniesliterature">http://mactonnies.com/ufobooks.html</string>
    <string name="title_site_mactonniesliterature">Literature summary</string>
    <string name="url_site_ufocasebookpictures">http://www.ufocasebook.com/bestufopictures.html</string>
    <string name="title_site_ufocasebookpictures">Best pictures</string>
    <string name="url_site_isaackoiphotos">http://www.isaackoi.com/alien-photos.html</string>
    <string name="title_site_isaackoiphotos">Alien photos</string>
    <string name="title_report_nuforcstates">Sightings N.America (NUFORC)</string>
    <string name="title_report_nuforcmonthly">Sightings by month (NUFORC)</string>
    <string name="title_report_nuforcshape">Sightings by shape (NUFORC)</string>
    <string name="title_report_nuforcjetchase">Chase &amp; aircraft (NUFORC)</string>
    <string name="url_report_nuforcstates">http://www.nuforc.org/webreports/</string>
    <string name="url_report_nuforcmonthly">http://www.nuforc.org/webreports/ndxevent.html</string>
    <string name="url_report_nuforcshape">http://www.nuforc.org/webreports/ndxshape.html</string>
    <string name="url_report_nuforcjetchase">http://www.nuforc.org/Interlink.html</string>
    <string name="url_rss_mufonnews">http://www.mufon.com/17/feed</string>
    <string name="title_rss_mufonnews">MUFON - UFO News</string>
    <string name="url_rss_mufonalerts">http://www.mufon.com/25/feed</string>
    <string name="title_rss_mufonalerts">MUFON - MUFON Alerts</string>
    <string name="url_rss_rogermarsh">http://www.examiner.com/user/1565231/1872696/feed</string>
    <string name="title_rss_rogermarsh">Roger Marsh (National ufo Examiner)</string>
    <string name="url_rss_ufodigest">http://www.ufodigest.com/rss/new-articles</string>
    <string name="title_rss_ufodigest">UFO Digest - Aliens and UFOs</string>
    <string name="url_rss_ukufosightings">http://www.uk-ufo.co.uk/feed/</string>
    <string name="title_rss_ukufosightings">UK UFO Sightings</string>
    <string name="url_rss_ufoupdates">http://feeds.feedburner.com/UFOupdates?format=xml</string>
    <string name="title_rss_ufoupdates">UFO Updates</string>
    <string name="url_rss_openminds">http://www.openminds.tv/feed/</string>
    <string name="title_rss_openminds">OpenMinds News and Investigations</string>
    <string name="url_rss_ufocasebook">http://feeds.feedburner.com/feedburner/Qpaj?format=xml</string>
    <string name="title_rss_ufocasebook">UFO CASEBOOK</string>
    <string name="url_rss_supernaturalufo">http://www.supernaturalufo.com/feed/</string>
    <string name="title_rss_supernaturalufo">SupernaturalUFO.com</string>
    <string name="url_rss_fringe">http://aliencasebookfringe.blogspot.com/feeds/posts/default?alt=rss</string>
    <string name="title_rss_fringe">Alien Casebook Fringe</string>
    <string name="url_rss_stalker">http://feeds.feedburner.com/ufostalker?format=xml</string>
    <string name="title_rss_stalker">UFO Stalker</string>
    <string name="url_rss_ufonut">http://www.ufonut.com/feed</string>
    <string name="title_rss_ufonut">UFO NUT</string>
    <string name="url_rss_disclosed">http://www.ufosdisclosed.com/community/forums/the-main-ufo-discussion.2/index.rss</string>
    <string name="title_rss_disclosed">UFOs Disclosed - Main Discussion</string>
    <string name="url_rss_nationalufocenter">http://nationalufocenter.com/feed/</string>
    <string name="title_rss_nationalufocenter">National UFO Center</string>
    <string name="url_rss_paranormalradionetwork">http://paranormalradionetwork.org/rss2.aspx</string>
    <string name="title_rss_paranormalradionetwork">Paranormal Radio Network</string>
    <string name="url_blog_objectreport">http://theobjectreport.blogspot.com/feeds/posts/default</string>
    <string name="title_blog_objectreport">Agents D &amp; K (The Object Report)</string>
    <string name="content_youtube_thumbnail_image">YouTube video thumbnail image.</string>
    <string name="content_youtube_play_video">Play video</string>
    <string name="content_prev">Previous</string>
    <string name="content_next">Next</string>
	<string name="youtube_action_create_playlist">Create New Playlist</string>
</resources>