<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- <RadioGroup
        android:id="@+id/radGrpQrySubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp" >

        <RadioButton
            android:id="@+id/radQrySubjectSightings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_subject_sightings" />

        <RadioButton
            android:id="@+id/radQrySubjectBeings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_subject_beings" />
    </RadioGroup> -->

    <!-- <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radGrpQrySubject"
        android:layout_alignParentRight="true"
        android:layout_marginRight="26dp"
        android:text="@string/lbl_btn_search"
        android:textColor="@color/ufo_tab_highlight" /> -->
    
    <!-- <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6dp"
        android:layout_below="@+id/radGrpQrySubject"
        android:ems="10"
        android:hint="search terms"
        android:inputType="text" >

        <requestFocus />
    </EditText> -->
    
    <RadioGroup
        android:id="@+id/radGrpQrySource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp" >

        <RadioButton
            android:id="@+id/radQrySourceNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_source_news" />

        <RadioButton
            android:id="@+id/radQrySourceWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_source_web" />

        <RadioButton
            android:id="@+id/radQrySourceVideos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_source_videos" />
    </RadioGroup>
    
    <RadioGroup
        android:id="@+id/radGrpQryRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/radGrpQrySource"
        android:layout_alignParentRight="true"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="10dp" >

        <RadioButton
            android:id="@+id/radQryRangeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_range_day" />

        <RadioButton
            android:id="@+id/radQryRangeWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_range_week"  />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radGrpQryEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radGrpQryRange"
        android:layout_below="@+id/radGrpQryRange"
        android:layout_marginRight="26dp" >

        <RadioButton
            android:id="@+id/radQryEngineGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_search_engine_google" />

        <RadioButton
            android:id="@+id/radQryEngineBing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_search_engine_bing" />

    </RadioGroup>

    <ListView
	    android:id="@+id/listviewsearches"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:divider="@color/divider_color"
	    android:dividerHeight="2dp" />
    
</RelativeLayout>