<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout 
        android:id="@+id/footerBar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"	    
        android:layout_alignParentBottom="true" >
							
			<ImageButton
			    android:id="@+id/next"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="10dp"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:scaleType="center"
		    	android:adjustViewBounds="false"
		   		android:minHeight="40dp"
		    	android:minWidth="60dp"
		    	android:background="@null"
			    android:src="@drawable/arrow_down_float"
			    android:contentDescription="@string/content_next" />

			<TextView
		        android:id="@+id/counts"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_gravity="right"
			    android:gravity="center"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:textColor="@android:color/primary_text_dark" />
			
			<ImageButton
			    android:id="@+id/prev"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="10dp"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:scaleType="center"
		    	android:adjustViewBounds="false"
		   		android:minHeight="40dp"
		    	android:minWidth="60dp"
		    	android:background="@null"
			    android:src="@drawable/arrow_up_float"
			    android:contentDescription="@string/content_prev" />
						
			<TextView
		        android:id="@+id/playall"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:layout_marginLeft="30dp"
			    android:layout_marginRight="20dp"
			    android:layout_gravity="right"
			    android:gravity="center"
			    android:text="@string/msg_play_all"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="@android:color/primary_text_dark"
			    android:visibility="invisible"/>
			
	</LinearLayout>
    
	<com.duke.android.ufowatch.ui.widget.VideoListView2
		android:id="@+id/videosListView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:dividerHeight="2dp"
		android:divider="@color/divider_color" />
	
	<View android:id="@+id/spacer"
        style="@style/SpacerEasyFill"
        android:layout_above="@id/footerBar"
        android:layout_below="@id/videosListView" />
	

</RelativeLayout>
    
